<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="end"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.catapult.android.mca.ResetPasswordActivity" >
    
   <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:ems="14"
        android:hint="@string/TeamLeadUsername" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="26dp"
        android:ems="14"
        android:hint="@string/TeamLeadPassword"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignStart="@+id/imageView1"
        android:layout_marginBottom="27dp"
        android:text="@string/login_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="50dp"
        android:background="@color/orange"
        android:onClick="login"
        android:text="@string/Login" />
	
    <View
        android:id="@+id/myRectangleView"
        android:layout_width="350dp"
        android:layout_height="225dp"
        android:layout_alignTop="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:background="@drawable/square_login" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignStart="@+id/myRectangleView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/sitelogo"
        android:src="@drawable/site_logo" />  

    <View
        android:layout_width="250dp"
        android:layout_height="1dp"
        android:layout_above="@+id/textView1"
        android:layout_alignStart="@+id/imageView1"
        android:layout_marginBottom="22dp"
        android:background="@android:color/black" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" 
        android:background="@color/gray">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="375dp"
            android:clickable="true"
            android:text="@string/password_reset_1"
            android:textSize="25sp"
            android:textColor="@android:color/white" />

    </TableRow>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText1"
        android:layout_alignBottom="@+id/editText1"
        android:layout_alignLeft="@+id/tableRow1"
        android:layout_alignStart="@+id/imageView1"
        android:text="@string/ResetTeamLeadRequest"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignEnd="@+id/button1"
        android:layout_alignRight="@+id/editText2"
        android:layout_marginRight="45dp"
        android:background="@color/orange"
        android:onClick="cancel"
        android:text="@string/Cancel" />

</RelativeLayout>
