<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:text="michael@catapulthealth.com"
        android:hint="@string/Username" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/Password"
        android:text="C@tapult1"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignStart="@+id/imageView1"
        android:layout_marginBottom="27dp"
        android:text="@string/login_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="50dp"
        android:background="@color/orange"
        android:onClick="login"
        android:text="@string/Login" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:text="@string/forgot_password"
        android:clickable="true"
        android:autoLink="all"
        android:onClick="forgotPassword"
        android:textAppearance="?android:attr/textAppearanceSmall" />
	
    <View
        android:id="@+id/myRectangleView"
        android:layout_width="400dp"
        android:layout_height="250dp"
        android:layout_alignTop="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:background="@drawable/square_login" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignStart="@+id/myRectangleView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/sitelogo"
        android:src="@drawable/site_logo" />  

    <View
        android:layout_width="250dp"
        android:layout_height="1dp"
        android:layout_above="@+id/textView1"
        android:layout_alignStart="@+id/imageView1"
        android:layout_marginBottom="22dp"
        android:background="@android:color/black" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" 
        android:background="@color/gray">
		
        
        
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:text="@string/help"
            android:layout_marginStart="1100dp"
        	android:textColor="#0000CD"    
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </TableRow>

</RelativeLayout>