<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.catapult.android.mca.PasswordResetActivity2" >

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/spinner1"
        android:layout_marginTop="26dp"
        android:ems="13"
        android:hint="Security Answer"
         />
    
    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/editText4"
        android:layout_marginTop="26dp"
        android:ems="13"
        android:hint="@string/EnterNewPassword"
        android:inputType="textPassword" />
    
     <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="26dp"
        android:ems="13"
        android:hint="@string/ReEnterNewPassword"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignStart="@+id/imageView1"
        android:layout_marginBottom="27dp"
        android:text="@string/login_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
	
    <View
        android:id="@+id/myRectangleView"
        android:layout_width="350dp"
        android:layout_height="375dp"
        android:layout_alignTop="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:background="@drawable/square_login" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignStart="@+id/myRectangleView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/sitelogo"
        android:src="@drawable/site_logo" />  

    <View
        android:layout_width="250dp"
        android:layout_height="1dp"
        android:layout_above="@+id/textView1"
        android:layout_alignStart="@+id/imageView1"
        android:layout_marginBottom="22dp"
        android:background="@android:color/black" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" 
        android:background="@color/gray">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="450dp"
            android:clickable="true"
            android:text="@string/password_reset_2"
            android:textSize="25sp"
            android:textColor="@android:color/white" />

    </TableRow>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/myRectangleView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:ems="13"
        android:text="Username"
        android:textSize="19sp" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText2"
         android:layout_alignEnd="@+id/editText2"
        android:layout_below="@+id/textView4" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        
        android:layout_alignStart="@+id/editText3"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="10dp"
        android:background="@color/orange"
        android:onClick="resetPassword"
        android:text="@string/Reset" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignEnd="@+id/button1"
        android:layout_alignRight="@+id/imageView1"
        android:background="@color/orange"
        android:onClick="cancel"
        android:text="@string/Cancel" />
    
    <TextView
        android:id="@+id/reset_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignEnd="@+id/myRectangleView"
       
        android:padding="10dip"
        android:textColor="#e30000"
        android:textStyle="bold" />

</RelativeLayout>
