<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/image2"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/site_logo" />

        <TextView
            android:id="@+id/clinictext"
            style="@style/FontSizeMedium"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@+id/image2"
            android:text="@string/clinic_name"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/clinictime"
            style="@style/FontSizeMedium"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@+id/clinictext"
            android:text="Clinic Time:"
            android:textColor="#0079D2" />

        <TextView
            android:id="@+id/time"
            style="@style/FontSizeMedium"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@+id/clinictime"
            android:clickable="true"
            android:text="@string/time"
            android:textColor="#0079D2" />

        <TextView
            android:id="@+id/home"
            style="@style/FontSizeMedium"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@+id/time"
            android:text="@string/home"
            android:clickable="true"
            android:onClick="serve"
            android:textColor="#0079D2" />

        <TextView
            android:id="@+id/user"
            style="@style/FontSizeMedium"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@+id/home"
            android:text="@string/user"
            android:textColor="#0079D2" />

        <TextView
            android:id="@+id/logout"
            style="@style/FontSizeMedium"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@+id/user"
            android:text="@string/logout"
            android:textColor="#0079D2" />
    </RelativeLayout>

    <TextView
        android:id="@+id/clinicschedule"
        style="@style/FontSizeLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:text="CLINIC  SCHEDULE"
        android:textColor="@android:color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#D3D3D3" >

        <TextView
            android:id="@+id/search_first_name"
            style="@style/FontSizeMedium"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:text="First Name"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/search_last_name"
            style="@style/FontSizeMedium"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/search_first_name"
            android:text="Last Name"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/search_effective_date"
            style="@style/FontSizeMedium"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/search_last_name"
            android:text="Date of Birth"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/search_first_name_edit_box"
            style="@style/FontSizeMedium"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_below="@+id/search_first_name"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rectangular_edittext_whitebackground"
            android:hint="@string/hint_first_name" />

        <EditText
            android:id="@+id/search_last_name_edit_box"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_below="@+id/search_last_name"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/search_first_name_edit_box"
            android:background="@drawable/rectangular_edittext_whitebackground"
            android:hint="@string/hint_last_name" />

        <EditText
            android:id="@+id/calendar_edit_box"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_below="@+id/search_effective_date"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/search_last_name_edit_box"
            android:background="@drawable/rectangular_edittext_whitebackground"
            android:hint="@string/hint_date" />

        <ImageButton
            android:id="@+id/calendar_image_button"
            android:layout_width="55dp"
            android:layout_height="45dp"
            android:layout_below="@+id/search_effective_date"
            android:layout_marginRight="25dp"
            android:layout_marginTop="0dp"
            android:layout_toRightOf="@+id/calendar_edit_box"
            android:src="@drawable/calendar" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="85dp"
            android:layout_height="35dp"
            android:layout_below="@+id/search_effective_date"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/calendar_image_button"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:orientation="vertical" >
		
        <TableLayout
          	android:id="@+id/patients_header_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </TableLayout>
        
        <ScrollView
            android:id="@+id/ScrollView11"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip" >

                <TableLayout
                    android:id="@+id/patients_table"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >
                </TableLayout>
            </LinearLayout>
        </ScrollView>


    </LinearLayout>

</LinearLayout>